# UnrealGamePackager

./: .gitignore  BuildSettings.cpp  BuildSettings.hpp  CMakeLists.txt  Main.cpp  README.md  cpp-ue5-game-packager.sln  cpp-ue5-game-packager.vcxproj  cpp-ue5-game-packager.vcxproj.filters
AutomationCommands/: AutomationCommand.h  ProjectVersionUpdateAutomationCommand.cpp  ProjectVersionUpdateAutomationCommand.h  ZipBuildAutomationCommand.cpp  ZipBuildAutomationCommand.h
Source/UnrealGamePackager/: BuildSettings.cpp  Main.cpp
Source/UnrealGamePackager/Tasks/: ProjectVersionUpdateTask.cpp  ProjectVersionUpdateTask.hpp  Task.hpp  ZipBuildTask.cpp  ZipBuildTask.hpp
Tasks/: ProjectVersionUpdateTask.cpp  ProjectVersionUpdateTask.h  ProjectVersionUpdateTask.hpp  Task.h  Task.hpp  ZipBuildTask.cpp  ZipBuildTask.h  ZipBuildTask.hpp
